--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@ kibana_user: kibana
 kibana_group: kibana
 
 kibana_vm_repo_baseurl: https://artifacts.elastic.co/packages/7.x/yum
-kibana_vm_repo_gpgkey: https://artifacts.elastic.co/GPG-KEY-kibana
+kibana_vm_repo_gpgkey: https://artifacts.elastic.co/GPG-KEY-elasticsearch
 kibana_vm_repo_packages: ["kibana"," initscripts"]
 
 kibana_server_name: none
@@ -17,6 +17,9 @@ kibana_force_keystore_create: false
 
 kibana_security_enabled: false
 kibana_security_audit_enabled: false
+kibana_security_ssl_enabled: false
+kibana_security_ssl_certificate: kibana.pem
+kibana_security_ssl_key: kibana.key
 kibana_security_elasticsearch_user: kibana
 kibana_security_elasticsearch_pass: 3l4st1sT4ckb00tstr4p
 
@@ -27,5 +30,8 @@ kibana_elasticsearch_cluster_network_addresses: []
 kibana_elasticsearch_network_port: 9200
 kibana_elasticsearch_ssl_verification_mode: none
 kibana_elasticsearch_certificate_ca_file_ingest: ESca.crt
+
+kibana_certificate_local_dir: certificates
+kibana_certificate_dir: /etc/kibana/certs
 
 kibana_monitoring_metricbeat_enabled: false
