--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,11 +1,29 @@
 ---
+
 dependency:
   name: galaxy
+
 driver:
   name: vagrant
+  provider:
+    name: VBox
+
 platforms:
-  - name: instance
+  - name: instance-${MOLECULE_ROLE_NAME:-molecule}-1
+    groups:
+      - kibana
+    box: centos/7
+    memory: 512
+    cpus: 1
+
 provisioner:
   name: ansible
+  log: true
+  options:
+    become: true
+  group_vars:
+    kibana:
+      kibana_security_enabled: False
+
 verifier:
   name: ansible
