--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,8 @@ kibana_log_dir: /usr/share/kibana/logs
 
 kibana_force_keystore_create: false
 
+kibana_cluster_name: clustermicro
+
 kibana_security_enabled: false
 kibana_security_audit_enabled: false
 kibana_security_ssl_enabled: false
